Fix width on input-and-submit for accurate resp. on iphone

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header h1 {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   padding: .5em .5em;
-  width: 75vw;
+  width: 70vw;
   font-size: 2em;
   font-style: italic;
   background: #f1faee;
@@ -54,8 +54,9 @@ header h1 {
 }
 
 .input-and-submit #submit-button {
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  width: 25vw;
+  width: 30vw;
   font-size: 2em;
   font-weight: 400;
   border: 1px solid #118ab2;
@@ -63,6 +64,10 @@ header h1 {
   color: #073b4c;
   /* border-radius: 0 20px 20px 0; */
   text-align: center;
+}
+
+.input-and-submit #submit-button:hover {
+  cursor: pointer;
 }
 
 .item-list {
